<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:kelly="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.proglove.basicdemo.MainActivity">

    <FrameLayout
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logosBar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/dividingLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:contentDescription="@string/dividing_line"
            app:srcCompat="@drawable/dividing_line" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/logosBar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/sapLogo"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:adjustViewBounds="true"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/sap_logo"
                app:srcCompat="@drawable/sap_logo" />
        </FrameLayout>

        <ImageView
            android:id="@+id/progloveLogo"
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@drawable/pg_logo" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/igzLogo"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:adjustViewBounds="true"
                android:contentDescription="@string/igz_logo"
                app:srcCompat="@drawable/igz_logo" />
        </FrameLayout>

    </LinearLayout>

    <de.proglove.katharinaUI.ScanText
        android:id="@+id/barcode_input"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:hint="@string/barcode_input"
        android:inputType="textPersonName"
        kelly:validator=".+" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/barcode_input"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:text="Versorgung Haltepunkt"
            android:textSize="18sp" />
    </FrameLayout>

</RelativeLayout>