<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:katharina="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matthias.kathaui.MainActivity">

    <de.proglove.katharinaUI.ScanText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        katharina:validator=".+" />

    <de.proglove.katharinaUI.ScanText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/password"
        katharina:compare="true"
        katharina:validator="pass"
        android:inputType="textPassword" />

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_above="@id/editTextUser"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:autoText="false"
                android:gravity="bottom"
                android:text="powered by"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:adjustViewBounds="false"
                android:contentDescription="@string/logo_description"
                android:paddingBottom="15dp"
                app:srcCompat="@drawable/proglove" />
        </LinearLayout>

    </FrameLayout>

</RelativeLayout>